--- a/Code/Mantid/Geometry/Geometry.vcproj
+++ b/Code/Mantid/Geometry/Geometry.vcproj
@@ -40,7 +40,7 @@
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/DWNT"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts/;inc;Deprecated/inc;../Kernel/inc;../../Third_Party/include;..\..\Third_Party\include\OpenCascade"
+				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts/;inc;../Kernel/inc;../../Third_Party/include;..\..\Third_Party\include\OpenCascade"
 				PreprocessorDefinitions="_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="3"
 				OpenMP="true"
@@ -120,7 +120,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				WholeProgramOptimization="true"
-				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts;inc;Deprecated/inc;../Kernel/inc;../../Third_Party/include;../../Third_Party/include/OpenCascade"
+				AdditionalIncludeDirectories="&quot;../../Third_Party/include/gts/glib-2.0&quot;;../../Third_Party/include/gts;inc;../Kernel/inc;../../Third_Party/include;../../Third_Party/include/OpenCascade"
 				PreprocessorDefinitions="_USE_MATH_DEFINES;MS_VISUAL_STUDIO;IN_MANTID_GEOMETRY=1;_CRT_SECURE_NO_DEPRECATE;_CRT_NONSTDC_NO_DEPRECATE;_SCL_SECURE_NO_DEPRECATE"
 				RuntimeLibrary="2"
 				OpenMP="true"
@@ -763,11 +763,11 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inc\MantidGeometry\Math\RotCounter.h"
+				RelativePath=".\auxinc\RotCounter.h"
 				>
 			</File>
 			<File
-				RelativePath=".\auxinc\RotCounter.h"
+				RelativePath=".\inc\MantidGeometry\Math\RotCounter.h"
 				>
 			</File>
 			<File
