Changed ParameterTie so that it inherits from ParameterReference. re #1121

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -287,6 +287,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\ParameterReference.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\ParameterTie.cpp"
 				>
 			</File>
@@ -760,6 +764,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidAPI\PairedGroupAlgorithm.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidAPI\ParameterReference.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\ParameterReferenceTest.h"
 				>
 			</File>
 			<File
