--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -113,7 +113,7 @@ for i in Code/Mantid/Bin/Shared/*.so; do
     esac
 done
 install -m755 Code/qtiplot/qtiplot/MantidPlot $RPM_BUILD_ROOT/%{mantidbindir}/MantidPlot
-for i in qtiplotrc.py qtiUtil.py mantidplotrc.py; do
+for i in qtiplotrc.py qtiUtil.py mantidplotrc.py mantidplot.py; do
     install -m755 Code/qtiplot/qtiplot/$i $RPM_BUILD_ROOT/%{mantidbindir}/$i
 done
 install -m755 Code/Mantid/PythonAPI/MantidFramework.py $RPM_BUILD_ROOT/%{mantidbindir}
