--- a/Code/Mantid/DataObjects/SConscript
+++ b/Code/Mantid/DataObjects/SConscript
@@ -1,6 +1,6 @@
 #For MantidDataObjects
-
 import os
+import sys
 import MantidBuild
 
 #GET LIST OF CPPS
@@ -12,8 +12,10 @@ Import('env')
 myenv = env.Clone()
 myenv.Append(CPPDEFINES=[('IN_MANTID_DATA_OBJECTS',1)])
 listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
+if sys.platform == 'darwin':
+   myenv.Replace(SHLINKFLAGS='-dynamiclib -install_name @loader_path/./${TARGET.file}')
 
 #BUILD CODE
-shared = myenv.SharedLibrary('lib/MantidDataObjects', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidDataObjects.pdb')
+shared = myenv.SharedLibrary('lib/MantidDataObjects', listCpps, LIBS=myenv['MYLIBLIST'], LIBPATH=myenv['MYLIBDIRLIST'], PDB='lib/MantidDataObjects.pdb')
 retval = { 'shared': shared, 'sharedobjs' : listSharedObjects, 'libs': [ 'MantidDataObjects' ] }
 Return('retval')
