--- a/Code/Mantid/Nexus/SConscript
+++ b/Code/Mantid/Nexus/SConscript
@@ -5,13 +5,22 @@ import MantidBuild
 
 #GET LIST OF CPPS files
 codeFolder = os.path.abspath('./src')
-listCpps = MantidBuild.getCPPFiles(codeFolder)#Import environment
+listCpps = MantidBuild.getCPPFiles(codeFolder)
+
+#Import environment
 Import('env')
 myenv = env.Clone()
 myenv.Append(CPPDEFINES=[('IN_MANTID_NEXUS',1),'NOMINMAX'])
+
+# Add dependency on nexus libraries
+if os.name == 'posix':
+    myenv.Append(MYLIBLIST=['NeXus'])
+else:
+    myenv.Append(MYLIBLIST=['libNeXus-0'])
+
 listSharedObjects = MantidBuild.getSharedObjects(listCpps, myenv)
 
 #BUILD CODE
-shared = myenv.SharedLibrary('lib/MantidNexus', listCpps, LIBS=env['MYLIBLIST'], LIBPATH=env['MYLIBDIRLIST'], PDB='lib/MantidNexus.pdb')
+shared = myenv.SharedLibrary('lib/MantidNexus', listCpps, LIBS=myenv['MYLIBLIST'], LIBPATH=myenv['MYLIBDIRLIST'], PDB='lib/MantidNexus.pdb')
 retval = { 'shared': shared, 'sharedobjs' : listSharedObjects, 'libs': ['MantidNexus'] }
 Return('retval')
