--- a/Code/Mantid/SConstruct
+++ b/Code/Mantid/SConstruct
@@ -318,8 +318,8 @@ for subproj in subProjs:
        env.Install(dest_dir, ret['shared'])    
 
 # main program
-ret = SConscript(['Main/SConscript'])
-env.Install(dest_dir, ret['shared'])
+#ret = SConscript(['Main/SConscript'])
+#env.Install(dest_dir, ret['shared'])
 
 # User Algs
 # Currently has a dependency on CurveFitting (which ought to be removed)
