Added interpolation class in preparation to read in tables from IDF. Added working Nexus test in IkedaCarpenterTest (possible now that workspace parameter map is loaded at the end of LoadInstrument). Refs #967.

--- a/Code/Mantid/DataHandling/DataHandling.vcproj
+++ b/Code/Mantid/DataHandling/DataHandling.vcproj
@@ -439,6 +439,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\test\LoadDAETest.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidDataHandling\LoadDetectorInfo.h"
 				>
 			</File>
