--- a/Code/Mantid/Kernel/Kernel.vcproj
+++ b/Code/Mantid/Kernel/Kernel.vcproj
@@ -223,6 +223,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Interpolation.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\IPropertyManager.cpp"
 				>
 			</File>
@@ -422,6 +426,14 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidKernel\Instantiator.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidKernel\Interpolation.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test\InterpolationTest.h"
 				>
 			</File>
 			<File
