For Mac, link to OpenGL via the framework rather than to individual libraries. Re #893

--- a/Code/Mantid/Geometry/SConscript
+++ b/Code/Mantid/Geometry/SConscript
@@ -17,8 +17,14 @@ myenv.Append(CPPDEFINES=[('IN_MANTID_GEOMETRY',1)])
 #For Windows, OpenCascade stuff is still in the main SConstruct
 if platform.system() == 'Darwin':
    myenv.Append(CPPDEFINES=['HAVE_IOSTREAM','HAVE_LIMITS','HAVE_IOMANIP'])
-   myenv.Append(CPPPATH=['../../Third_Party/include/OpenCascade','/usr/X11/include/GL'])
-   myenv.Append(MYLIBDIRLIST='/usr/X11/lib')
+   myenv.Append(CPPPATH=['../../Third_Party/include/OpenCascade'])
+   #,'/usr/X11/include/GL'])
+   #myenv.Append(MYLIBDIRLIST='/usr/X11/lib')
+
+   # In Mac-land we should link to the OpenGL framework rather than
+   # specific libraries
+   myenv.Append(LINKFLAGS='-framework OpenGL')
+
 elif platform.system() == 'Linux':
    opencascade_path='/opt/OpenCASCADE'
    myenv.Append(CPPPATH=opencascade_path + '/inc')
@@ -32,7 +38,7 @@ elif platform.system() == 'Linux':
    # so the library path doesn't need to be touched
    myenv.Append(CPPPATH='/usr/include/opencascade')
 
-if os.name == 'posix':
+#if os.name == 'posix':
    myenv.Append(MYLIBLIST=['GL','GLU'])
 else:
    myenv.Append(MYLIBLIST=['opengl32','glu32'])
