Improved the handling of scripts paths in the ConfigService so that there are two separate keys for the Python scripts: those required by Mantid and those specified by users. Updated SANS interface so that it better handles being unable to find the reduction script. Re #1152

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -16,9 +16,24 @@ plugins.directory = .
 # Where to load instrument definition files from
 instrumentDefinition.directory = ../../../../Test/Instrument
 
-# The location of the scripts directory. This is added to the python path by the
-# Python API so that Mantid scripts can be imported more easily
+# Location of Python scripts that are required for certain aspects of Mantid to function
+# correctly, i.e. customized interfaces
+#
+# WARNING: Altering this value will almost certainly break Mantid functionality
+#
+requiredpythonscript.directories = ../../PythonAPI/scripts/Crystallography;../../PythonAPI/scripts/Disordered Materials;\
+../../PythonAPI/scripts/Engineering;../../PythonAPI/scripts/Excitations;../../PythonAPI/scripts/Large Scale Structures;../../PythonAPI/scripts/Molecular Spectroscopy;\
+../../PythonAPI/scripts/Muons;../../PythonAPI/scripts/Neutrinos;../../PythonAPI/scripts/SANS
+
+# Additional directory for Python scripts. This is added to the Python path by the
+# Python API (DEPRECATED: Use pythonscripts.directories)
+# Note that this is NOT recursive
 pythonscripts.directory = ../../PythonAPI/scripts
+
+# Additional directories for Python scripts. These are added to the Python path by the
+# Python API.
+# Note that they are NOT recursive
+pythonscripts.directories = ../../PythonAPI/scripts
 
 # The locations of Python algorithms that are to be loaded at startup
 pythonalgorithms.directories = ../PythonAPI/PythonAlgorithms
