Update RPM build scripts to also install sip and PyQt4 into the Mantid bin directory so that they are not required on a user's system. Re #100

--- a/Code/Mantid/Properties/Mantid.properties
+++ b/Code/Mantid/Properties/Mantid.properties
@@ -36,7 +36,7 @@ pythonscripts.directory = ../../PythonAPI/scripts
 pythonscripts.directories = ../../PythonAPI/scripts
 
 # The locations of Python algorithms that are to be loaded at startup
-pythonalgorithms.directories = ../PythonAPI/PythonAlgorithms
+pythonalgorithms.directories = ../../PythonAPI/PythonAlgorithms
 
 # A semi-colon(;) separated list of directories to use to search for data
 # Use forward slash / for all paths
