Made it possible to use Convolution in MantidPlot. re #853

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -447,6 +447,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\Scale.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\SimpleIntegration.cpp"
 				>
 			</File>
