Improve the speed of LoadRaw in the presence of multiple periods, particularly in the case where the monitors are loaded separately where memory usage is also significantly reduced if there are large log files. Also fixed a minor bug in the attachment of period logs to workspaces. Re #1154.

--- a/Code/Mantid/Algorithms/Algorithms.vcproj
+++ b/Code/Mantid/Algorithms/Algorithms.vcproj
@@ -941,6 +941,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\inc\MantidAlgorithms\Scale.h"
+				>
+			</File>
+			<File
 				RelativePath=".\inc\MantidAlgorithms\SimpleIntegration.h"
 				>
 			</File>
