Re-jig the ConfigService so that the logging doesn't start up until after the Mantid.user.properties file has been dealt with. Re #1161.

--- a/Code/Mantid/API/API.vcproj
+++ b/Code/Mantid/API/API.vcproj
@@ -45,7 +45,7 @@
 				OpenMP="true"
 				WarningLevel="3"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4275"
+				DisableSpecificWarnings="4251;4275"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -123,7 +123,7 @@
 				RuntimeLibrary="2"
 				OpenMP="true"
 				WarningLevel="3"
-				DisableSpecificWarnings="4275"
+				DisableSpecificWarnings="4251;4275"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
